# gigachat

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: hello.rs  tower.rs
proto/: gigachatv1.proto
src/: auth.rs  faces.rs  giga.rs  lib.rs  service.rs
