[package]
name = "gigachat"
version = "1.2.0"
edition = "2024"

license = "MIT"
keywords = ["gigachat", "chatbot", "grpc", "api", "ai"]
description = "GigaChat API gRPC bindings"
repository = "https://github.com/bool-rus/gigachat"

[package.metadata.docs.rs]
features = ["tower"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
tower = ["dep:tower"]

[dependencies]
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["native-tls"] }
uuid = { version = "1.16.0", features = ["v4"] }

prost = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.44.1", default-features = false, features = ["rt"] }
thiserror = "2.0.12"

tower = { version = "0.5.2", optional = true }

[build-dependencies]
tonic-build = { version = "0.12" }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"]}
